--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/home/richard/odin-recipes/recipes/burger.html">Burger</a>
-    <p><a href="/home/richard/odin-recipes/recipes/risotto.html">Risotto</a></p>
-    <p><a href="/home/richard/odin-recipes/recipes/chicken.html">Chicken Wings</a></p>
+    <p><a href="./recipes/burger.html">Burger</a>>
+    <p><a href="./recipes/risotto.html">Risotto</a></p>
+    <p><a href="./recipes/chicken.html">Chicken Wings</a></p>
 </body>
 
 <!--comment-->
