odin recipes update

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<main>
 <head>
     <meta chatset="UTF-8">
     <title>Chicken wings</title>
@@ -62,4 +61,4 @@
 
 
 
-</html>
+</main>
