--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/burger.html">Burger</a>
+    <p><a href="./recipes/burger.html">Burger</a></p>
     <p><a href="./recipes/risotto.html">Risotto</a></p>
     <p><a href="./recipes/chicken.html">Chicken Wings</a></p>
 </body>
