odin recipes update

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Burger</h1>
 
-<img src="https://commons.wikimedia.org/wiki/File:Lounge_Burger_with_Bacon.jpg" width="400" height="300" alt="burger">
+<img src="/img/burger.jpeg" width="400" height="300" alt="burger">
 
 <h2>Description</h2>
 <p>A <em>Delicious</em> Burger that is dying to get into your stomach. The juicy patty is going to blow your head off</p>
