--- a/recipes/risotto.html
+++ b/recipes/risotto.html
@@ -5,7 +5,7 @@
 
 <body>
 <h1>Risotto</h1>
-<img src="https://commons.wikimedia.org/wiki/File:Risotto.jpg" width="400" height="300" alt="risotto picture">
+<img src="/img/Risotto.jpg" width="400" height="300" alt="risotto picture">
 <!--Picture-->  
 
 <h2>Description</h2>
