odin recipes update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Recipes</h1>
     <p><a href="./recipes/burger.html">Burger</a></p>
     <p><a href="./recipes/risotto.html">Risotto</a></p>
     <p><a href="./recipes/chicken.html">Chicken Wings</a></p>
