odin recipes update

--- a/recipes/risotto.html
+++ b/recipes/risotto.html
@@ -5,7 +5,7 @@
 
 <body>
 <h1>Risotto</h1>
-<img src="/img/Risotto.jpg" width="400" height="300" alt="risotto picture">
+<img src="../img/Risotto.jpg" width="400" height="300" alt="risotto picture">
 <!--Picture-->  
 
 <h2>Description</h2>
@@ -49,7 +49,7 @@
 
 
 
-    <a href="/home/richard/repos/odin-recipes/index.html">Back</a>
+    <a href="/index.html">Back</a>
 </body>
 
 
