--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Burger</h1>
 
-<img src="/img/burger.jpeg" width="400" height="300" alt="burger">
+<img src="../img/burger.jpeg" width="400" height="300" alt="burger">
 
 <h2>Description</h2>
 <p>A <em>Delicious</em> Burger that is dying to get into your stomach. The juicy patty is going to blow your head off</p>
@@ -35,7 +35,7 @@
 
     </ol>
 
-    <a href="/home/richard/odin-recipes/index.html">Back</a>
+    <a href="/index.html">Back</a>
 
 </body>
 
