--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1>Chicken Wings</h1>
-    <img src="/img/chicken_wings.jpg" width="400" height="300" alt="chicken wings picture">
+    <img src="../img/chicken_wings.jpg" width="400" height="300" alt="chicken wings picture">
     <h2>Decription</h2>
     <p>These Korean-style air-fried wings are crispy, sticky and spicy. Cooked in an air fryer they are ready in less than 30 minutes. They are perfect as an appetizer or add some rice and veggies on the side and you have a balanced meal.</p>
 <!--comment-->    
@@ -47,7 +47,7 @@
 
 
     </ul>
-    <a href="/home/richard/odin-recipes/index.html">Back</a>
+    <a href="/index.html">Back</a>
 </body>
 
 
