--- a/index.html
+++ b/index.html
@@ -2,14 +2,42 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="richard">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Recipes</h1>
-    <p><a href="./recipes/burger.html">Burger</a></p>
-    <p><a href="./recipes/risotto.html">Risotto</a></p>
-    <p><a href="./recipes/chicken.html">Chicken Wings</a></p>
+    <header>
+        <h1>Recipes</h1>
+    </header>
+    
+    <div class="container">
+        <section>
+    <p><a href="/recipes/burger.html">Burger</a></p>
+    <img src="/img/burger.jpg" alt="burger">
+    <p><a href="/recipes/risotto.html">Risotto</a></p>
+    <img src="/img/Risotto.jpg" alt="risotto">
+    <p><a href="/recipes/chicken.html">Chicken Wings</a></p>
+    <img src="/img/chicken_wings.jpg" alt="chicken wings">
+        </section>
+
+</div>
+
+    <aside>
+        <p><a href="./recipes/burger.html">Burger</a></p>
+        <p><a href="./recipes/risotto.html">Risotto</a></p>
+        <p><a href="./recipes/chicken.html">Chicken Wings</a></p>
+            
+
+
+    </aside>
+
+    <footer>
+        This is a learning website
+
+
+    </footer>
 </body>
 
 <!--comment-->
