--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,19 +3,21 @@
 
 <head>
     <title>Burger</title>
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 
 <body>
 <h1>Burger</h1>
 
-<img src="/img/burger.jpeg" width="400" height="300" alt="burger">
+<img src="/img/burger.jpg" width="400" height="300" alt="burger">
 
 <h2>Description</h2>
 <p>A <em>Delicious</em> Burger that is dying to get into your stomach. The juicy patty is going to blow your head off</p>
 
 <h2>Ingredients</h2>
     <ul>
-        <strong>Contains</strong>
+        <h3><strong>Contains</strong></h3>
         <li>2 pounds extra-lean ground beef</li>
         <li>1 (1 ounce) package dry onion soup mix</li>
         <li>1 egg, lightly beaten</li>
@@ -35,7 +37,7 @@
 
     </ol>
 
-    <a href="/home/richard/odin-recipes/index.html">Back</a>
+    <a href="../index.html">Back</a>
 
 </body>
 
