--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -2,6 +2,7 @@
 <head>
     <meta chatset="UTF-8">
     <title>Chicken wings</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -47,7 +48,7 @@
 
 
     </ul>
-    <a href="/home/richard/odin-recipes/index.html">Back</a>
+    <a href="../index.html">Back</a>
 </body>
 
 
