--- a/recipes/risotto.html
+++ b/recipes/risotto.html
@@ -5,6 +5,7 @@
 
 <body>
 <h1>Risotto</h1>
+<link rel="stylesheet" href="../styles.css">
 <img src="../img/Risotto.jpg" width="400" height="300" alt="risotto picture">
 <!--Picture-->  
 
@@ -49,7 +50,7 @@
 
 
 
-    <a href="/home/richard/odin-recipes/index.html">Back</a>
+    <a href="../index.html">Back</a>
 </body>
 
 
